@@ -6,7 +6,7 @@ use Data::Login;
 use DateTime;
 use English;
 use Error::Pure::Utils qw(clean);
-use Test::More 'tests' => 6;
+use Test::More 'tests' => 7;
 use Test::NoWarnings;
 
 # Test.
@@ -45,6 +45,32 @@ eval {
 };
 is($EVAL_ERROR, "Parameter 'hash_type' is required.\n",
 	"Parameter 'hash_type' is required.");
+clean();
+
+# Test.
+eval {
+	Data::Login->new(
+		'hash_type' => Data::HashType->new(
+			'name' => 'sha256',
+			'valid_from' => DateTime->new(
+				'day' => 1,
+				'month' => 1,
+				'year' => 2024,
+			),
+		),
+		'id' => 'bad',
+		'login_name' => 'skim',
+		# foobar
+		'password_hash' => 'aec070645fe53ee3b3763059376134f058cc337247c978add178b6ccdfb0019f',
+		'valid_from' => DateTime->new(
+			'year' => 2024,
+			'month' => 1,
+			'day' => 1,
+		),
+	);
+};
+is($EVAL_ERROR, "Parameter 'id' must be a natural number.\n",
+	"Parameter 'id' must be a natural number.");
 clean();
 
 # Test.
