@@ -1,6 +1,7 @@
 0.04
  - API CHANGE: Remove 'active' parameter from Data::Login::Role.
  - API CHANGE: Parameter 'valid_from' is required in Data::Login::Role.
+ - Add test for Data::Login constructor.
  - Rewrite checks for id to check_number_id().
  - Update usage of Data::HashType to 0.05 version.
 
